Paolo Mantegazza        <mantegazza@aero.polimi.it>


MBDyn 1.X-Devel
	Enhancements:
		- added screw joint (Mauro Manetti & Marco Morandini)
		- added explicit cast to math parser
		- added loads fade in in module-aerodyn
		  (Jens van Schelve, Patrick Rix)
		- added "drivep" (derivative) function to model namespace
		- added measures in aircraft instruments
	Backward compatibility issues:
		- "overwrite" option of "setenv" changed
		- incompatible module-aerodyn syntax change
		- reference systems of aircraft instruments changed
	Known issues:
		- Schur solver is broken
		- TotalPinJoint inverse dynamics support is broken
		- RTAI and multithread support incompatible
		- module-octave and multithread support incompatible
	Bug fixes:
		- fixed rotor radius in module-aerodyn (Jens van Schelve)
		- fixed redeclaration without definition of already defined
		  ifndef vars
		- fixed reference orientation reset after initial assembly
		  (Reinhard Resch)

MBDyn 1.5.5
	Enhancements:
		- added Umfpack solver iterative refinement support
		  (Reinhard Resch)
		- added built in drive callers interface to module-octave
		  (Reinhard Resch)
		- added scaling support to Naive, Umfpack and KLU solvers
		  (based on patch by Reinhard Resch)
	Backward compatibility issues:
		- old binary modal joint databases no longer supported
		- cyclocopter inflow models moved to module-cyclocopter
	Known issues:
		- Schur solver is broken
		- TotalPinJoint inverse dynamics support is broken
		- RTAI and multithread support incompatible
		- module-octave and multithread support incompatible
	Bug fixes:
		- fix binary modal joint database in MinGW
		- fix undefined const error message bug
		- fix libtool lang tag for run-time loadable modules
		  (noted by Jens van Schelve)
		- fix electric elements parsing (noted by Morten Ketelsen)
		- fix parsing on win32: MinGW/MSYS (Reinhard Resch)
		- fix naive multithread assembly bug

MBDyn 1.5.4
	Enhancements: